tests/NormalTests/paczka1/fuzzy1/75569803.err
Error in line 4: xoH48DtZ A510 52,8
Error in line 5: LFR S168 52,8
